--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.11",
     "sequelize": "^6.37.7",
+    "stripe": "^14.21.0",
     "ws": "^8.18.0"
   }
 }
