--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "jsonwebtoken": "^9.0.2",
+    "google-auth-library": "^9.15.0",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.11",
